--- a/style-rtl.css
+++ b/style-rtl.css
@@ -991,17 +991,17 @@ table td {
 .cm-header-builder .cm-site-title, .cm-header-builder .cm-site-description {
 	display: none;
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
 	.cm-header-builder .cm-title-show-desktop, .cm-header-builder .cm-tagline-show-desktop {
 		display: block;
 	}
 }
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 601px) and (max-width: 1024px) {
 	.cm-header-builder .cm-title-show-tablet, .cm-header-builder .cm-tagline-show-tablet {
 		display: block;
 	}
 }
-@media (max-width: 768px) {
+@media (max-width: 600px) {
 	.cm-header-builder .cm-title-show-mobile, .cm-header-builder .cm-tagline-show-mobile {
 		display: block;
 	}
